--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@syncfusion/ej2-react-schedule": "^26.1.39",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "firebase": "^10.12.4",
     "formik": "^2.4.6",
     "lucide-react": "^0.408.0",
     "next": "14.2.4",
