--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.0",
+    "@radix-ui/react-slot": "^1.1.0",
     "@syncfusion/ej2-react-schedule": "^26.1.39",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.1.7",
     "firebase": "^10.12.4",
     "formik": "^2.4.6",
     "lucide-react": "^0.408.0",
