--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,7 @@ yarn-error.log*
 
 # local env files
 .env*.local
-.env.local
+
 
 # vercel
 .vercel
@@ -38,3 +38,5 @@ next-env.d.ts
 
 
 src/lib/firebase.js
+
+service-account.json
