--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/firebase-adapter": "^2.4.1",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
@@ -17,11 +18,14 @@
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.1.7",
     "firebase": "^10.12.4",
+    "firebase-admin": "^11.11.1",
     "formik": "^2.4.6",
     "lucide-react": "^0.408.0",
     "next": "^14.2.5",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
+    "react-firebase-hooks": "^5.1.1",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "yup": "^1.4.0"
